--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,13 @@
     <title>Webpack Template</title>
   </head>
   <body>
-    <h1></h1>
+    <header>
+      <h1>Battleship</h1>
+    </header>
+    <div class="game-container">
+      <div class="user-gameboard"></div>
+
+      <div class="computer-gameboard"></div>
+    </div>
   </body>
 </html>
