--- a/src/template.html
+++ b/src/template.html
@@ -10,9 +10,15 @@
       <h1>Battleship</h1>
     </header>
     <div class="game-container">
-      <div class="user-gameboard"></div>
-
-      <div class="computer-gameboard"></div>
+      <div>
+        <h2>Your Board</h2>
+        <div class="user-board gameboard"></div>
+      </div>
+      <div>
+        <h2>Opponent's Board</h2>
+        <div class="computer-board gameboard"></div>
+      </div>
     </div>
+    <button class="startBtn">Start Game</button>
   </body>
 </html>
