rendered without error

--- a/src/template.html
+++ b/src/template.html
@@ -12,11 +12,11 @@
     <div class="game-container">
       <div>
         <h2>Your Board</h2>
-        <div class="user-board gameboard"></div>
+        <div class="userBoard board"></div>
       </div>
       <div>
         <h2>Opponent's Board</h2>
-        <div class="computer-board gameboard"></div>
+        <div class="computerBoard board"></div>
       </div>
     </div>
     <button class="startBtn">Start Game</button>
