--- a/src/template.html
+++ b/src/template.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webpack Template</title>
+    <style>
+      .output {
+        border: .5px solid black;
+        min-width: 200px;
+      }
+      .boardname {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <header>
-      <h1>Battleship</h1>
+      <h1>Battleship</h1><p>By CrispysCode</p>
     </header>
     <div class="game-container">
-      <div>
+      <div class="boardname">
         <h2>Your Board</h2>
         <div class="userBoard board"></div>
       </div>
-      <div>
+      <div class="output">
+      </div>
+      <div class="boardname">
         <h2>Opponent's Board</h2>
         <div class="computerBoard board"></div>
       </div>
