added new instances of Ship class & created all 5 ships

--- a/src/template.html
+++ b/src/template.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack Template</title>
+    <title>Battleship</title>
     <style>
       .output {
-        border: .5px solid black;
+        border: 0.5px solid black;
         min-width: 200px;
       }
       .boardname {
@@ -16,15 +16,15 @@
   </head>
   <body>
     <header>
-      <h1>Battleship</h1><p>By CrispysCode</p>
+      <h1>Battleship</h1>
+      <p>By CrispysCode</p>
     </header>
     <div class="game-container">
       <div class="boardname">
         <h2>Your Board</h2>
         <div class="userBoard board"></div>
       </div>
-      <div class="output">
-      </div>
+      <div class="output"></div>
       <div class="boardname">
         <h2>Opponent's Board</h2>
         <div class="computerBoard board"></div>
