--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,15 @@
         <h2>Your Board</h2>
         <div class="userBoard board"></div>
       </div>
-      <div class="output"></div>
+      <div class="output">
+        <div class="ships-container">
+          <div class="ship" draggable="true" data-length="5" data-name="Carrier">Carrier (5)</div>
+          <div class="ship" draggable="true" data-length="4" data-name="Battleship">Battleship (4)</div>
+          <div class="ship" draggable="true" data-length="3" data-name="Cruiser">Cruiser (3)</div>
+          <div class="ship" draggable="true" data-length="3" data-name="Submarine">Submarine (3)</div>
+          <div class="ship" draggable="true" data-length="2" data-name="Destroyer">Destroyer (2)</div>
+        </div>
+      </div>
       <div class="boardname">
         <h2>Opponent's Board</h2>
         <div class="computerBoard board"></div>
