--- a/src/template.html
+++ b/src/template.html
@@ -26,11 +26,46 @@
       </div>
       <div class="output">
         <div class="ships-container">
-          <div class="ship" draggable="true" data-length="5" data-name="Carrier">Carrier (5)</div>
-          <div class="ship" draggable="true" data-length="4" data-name="Battleship">Battleship (4)</div>
-          <div class="ship" draggable="true" data-length="3" data-name="Cruiser">Cruiser (3)</div>
-          <div class="ship" draggable="true" data-length="3" data-name="Submarine">Submarine (3)</div>
-          <div class="ship" draggable="true" data-length="2" data-name="Destroyer">Destroyer (2)</div>
+          <div
+            class="ship"
+            draggable="true"
+            data-length="5"
+            data-name="Carrier"
+          >
+            Carrier (5)
+          </div>
+          <div
+            class="ship"
+            draggable="true"
+            data-length="4"
+            data-name="Battleship"
+          >
+            Battleship (4)
+          </div>
+          <div
+            class="ship"
+            draggable="true"
+            data-length="3"
+            data-name="Cruiser"
+          >
+            Cruiser (3)
+          </div>
+          <div
+            class="ship"
+            draggable="true"
+            data-length="3"
+            data-name="Submarine"
+          >
+            Submarine (3)
+          </div>
+          <div
+            class="ship"
+            draggable="true"
+            data-length="2"
+            data-name="Destroyer"
+          >
+            Destroyer (2)
+          </div>
         </div>
       </div>
       <div class="boardname">
