ran prettier + added vertical placement for userShips

--- a/src/template.html
+++ b/src/template.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
-    <style>
-     
-    </style>
+    <style></style>
   </head>
   <body>
     <header>
@@ -63,8 +61,8 @@
         </div>
         <div class="textarea">
           <p><strong>Ship Orientation:</strong></p>
-          
-          <p class="renderText"></p>
+
+          <p class="renderText">PRESS R</p>
         </div>
         <button class="startBtn">Start Game</button>
       </div>
