added specific player hits/miss in output. Looking for bugs

--- a/src/template.html
+++ b/src/template.html
@@ -77,7 +77,7 @@
       </div>
     </div>
     <footer>
-      <p>Place your ships, then press start!</p>
+      <p>Drag & Drop the ships to your desired location!</p>
     </footer>
   </body>
 </html>
